<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>by.andd3dfx</groupId>
  <artifactId>java-sandbox</artifactId>
  <version>1.0-SNAPSHOT</version>

  <packaging>pom</packaging>

  <modules>
    <module>akka-project</module>
    <module>common</module>
    <module>coverage-report</module>
    <module>custom-spring-boot-starter</module>
    <module>dagger-sample</module>
    <module>db-versioning</module>
    <module>elasticsearch</module>
    <module>graphql-spring-boot-sample</module>
    <module>grpc-sample</module>
    <module>hibernate-mappings</module>
    <module>messaging-stomp-websocket</module>
    <module>sound-recorder-n-spectrum-analyzer</module>
    <module>test-containers</module>
    <module>two-factor-authentication</module>
    <module>unit-tests-debugging</module>
    <module>openapi-generator-sample</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>21</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <lombok.version>1.18.34</lombok.version>
    <commons-lang3.version>3.14.0</commons-lang3.version>
    <spring-boot.version>3.2.9</spring-boot.version>
    <h2.db.version>2.2.220</h2.db.version>
    <testcontainers.version>1.19.3</testcontainers.version>

    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <docker-maven-plugin.version>0.45.0</docker-maven-plugin.version>
    <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
    <maven-failsafe-plugin.version>3.2.3</maven-failsafe-plugin.version>
    <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
    <flyway-maven-plugin.version>10.18.0</flyway-maven-plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>generate-code-coverage-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <excludes>
            <exclude>**/config/**</exclude>
            <exclude>**/dto/**</exclude>
            <exclude>**/model/**</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
